# bassi

./: .bassi_context.json  .bassi_context.json.old  .coveragerc  .env.example  .gitignore  .mcp.json  .mcp.json.ALL  AGENTS.md  ANALYSIS_COMPLETE.md  ARCHITECTURE_OVERVIEW.md  ARCHITECTURE_QUICK_REF.md  CLAUDE.md  CLAUDE_TESTS.md  CLAUDE_TESTS_CREATE.md  MCP_SERVER_ARCHITECTURE.md  PLAYWRIGHT_INTEGRATION_STATUS.md  README.md  README.md.backup-20251208  SDK_MESSAGE_TYPES.md  SESSION_RESUMPTION_ANALYSIS.md  SESSION_RESUMPTION_SUMMARY.md  SOFTERIA_MS365_MCP_SERVER.md  TESTING.md  USECASES.md  check.sh  convert_local_pdfs.py  pyproject.toml  run-agent-cli.sh  run-agent-web.sh  run-agent.sh  run-tests.sh  run-web-v3.py  sample_quest.csv  test_linkedin_mcp.py  test_read_email.py  test_read_emails_mcp.py  test_single_agent.py  test_softeria_login.py  test_softeria_ms365.py
.claude/agents/: BULK_ARCHIVE_TASK_TEMPLATE.md  bulk-archive-agent.md  test-collector-agent-MANY.md  test-writer-agent-ONLY-ONE.md
.claude/commands/: adresse-erstellen.md  bel-write-tests-one-by-one.md  crm.md  email-analysis.md  help-enhanced.md
OLD/: APPROVAL_ERROR_FIX.md  BUG_FIX_SUMMARY.md  CONTEXT_FEATURES.md  CONTEXT_FIX.md  CONTEXT_FIX_SUMMARY.md  FINAL_FIX_SUMMARY.md  MARKDOWN_RENDERING.md  QUICK_DEMO.md  REWRITE_SUMMARY.md  SIMPLIFICATION.md  STATUS_LINE_SUMMARY.md  STREAMING_FEATURES.md  TESTING_KEY_BINDINGS.md  TEST_CONTEXT.md  TEST_RESULTS.md  TOOL_DISPLAY_FIX.md  UI_IMPROVEMENTS.md  check_clean_ui.py  check_color.py  check_statusbar.py  example_output.md  format_images.py  read_table_from_csv.py  status_bar.py  test_chat_simple.py  test_context.py  test_context_persistence.py  test_streaming.py  test_streaming_with_markdown.py  test_tool_usage.py
_DATA_FROM_USER/: Strategische_Analyse_Workshop_Konzept.md  Transformation_Philosophie_VundS.md  WSHappen - version BEL_1762501103.docx
_SCRIPTS_FROM_AGENT/: convert_local_pdfs.py  pdf_to_md.py  pdf_to_md_converter.py  test_bassi_email.py  test_playwright.py
bassi/: __init__.py  agent.py  agent_architecture_try_01.py  agent_architecture_try_01_sdk.py  agent_architecture_try_02.py  agent_architecture_try_02_sdk.py  agent_architecture_try_03.py  agent_architecture_try_03_sdk.py  agent_architecture_try_04_sdk.py  agent_architecture_try_05_sdk.py  agent_architecture_try_06_sdk.py  agent_architecture_utils_common.py  config.py  logging_utils.py  main.py  main.py,cover  web_server.py
bassi/core_v3/: __init__.py  agent_session.py  chat_index.py  chat_workspace.py  cli.py  discovery.py  file_registry.py  interactive_questions.py  message_converter.py  openapi_mcp.py  session_index.py  session_naming.py  session_workspace.py  tools.py  upload_service.py  web_server_v3.py  web_server_v3_old.py
bassi/mcp_servers/: __init__.py  bash_server.py  task_automation_server.py  web_search_server.py
bassi/shared/: __init__.py  agent_protocol.py  help_example.py  help_formatter.py  help_system.py  mcp_registry.py  permission_config.py  sdk_loader.py  sdk_types.py
bassi/static/: app.js  index.html  style.css
converted_md/: 2022_02_01-VS-Allgemeine-Geschaeftsbedingungen.md  2025_09_30_Einladung-zum-Arbeitskreis_Service.md  Fuehrung_Fokus_Denkwerkstatt_Flyer_A4_2025_01.md  GUT_ZUSAMMEN_ARBEITEN_Buch_Leseprobe_2023_Screen_RZ.md  Informationspflicht_Art13_Bewerbungsverfahren.md  VS-saugute-Transformation.md
docs/: 2025-11-08-phase-2.1-shared-modules.md  2025-11-08-phase-2.3-FINAL-RECOMMENDATIONS.md  2025-11-08-phase-2.3-detailed-CODE.md  2025-11-08-refactoring-plan.md  2025-11-08-test-fixes-summary.md  ALLOWED_TOOLS_NONE_IMPLEMENTATION.md  ARCHITECTURE_INDEX.md  AUTORELOAD_FIX_2025-11-16.md  CLAUDE_MD_UPDATE.md  CLEANUP_COMPLETE.md  COMPREHENSIVE_DOCS_REVIEW.md  DOCS_ACCURACY_REVIEW.md  DOCS_ORGANIZATION_COMPLETE.md  DOCS_REVIEW_2025-11-16.md  DOCS_REVIEW_COMPLETE.md  DUAL_MODE_IMPLEMENTATION.md  E2E_ERROR_HANDLING_TESTS_SUMMARY.md  FEATURES_STATUS_REPORT.md  FILE_CHIPS_CONCEPT.md  FINAL_DOCS_REVIEW_AND_ACTIONS.md  HOT_RELOAD_SCRIPTS.md  HOT_RELOAD_V3.md  IMPLEMENTATION_PLAN_FILE_CHIPS.md  INTERACTIVE_QUESTIONS_COMPLETE.md  INTERACTIVE_QUESTIONS_IMPLEMENTATION.md  MAIN_PY_COVERAGE_SESSION_3.md  MS365_INTEGRATION_COMPLETE.md  MS_GRAPH_PLANNING_SUMMARY.md  OPENAPI_MCP_FEATURE.md  README.md  REFACTORING_SUMMARY.md  REFACTORING_V3_BACKEND.md  REFACTORING_V3_FRONTEND.md  SESSION_MANAGEMENT_COMPLETION_PLAN.md  SESSION_MANAGEMENT_IMPLEMENTATION_ROADMAP.md  SOFTERIA_MS365_MCP_SERVER.md  SYSTEM_MESSAGE_HANDLING.md  TESTS_COMPLETION_REPORT.md  TESTS_CREATED_SUMMARY.md  TEST_ARCHITECTURE_REVIEW.md  (+26 more)
docs/agent_rethink/: ARCHITECTURE.md  event_store.py  events.py  model_adapter.py
docs/archive/: CLEANUP_PLAN_V3.md  INTERACTIVE_QUESTIONS_DEBUG.md  VERBOSE_LEVELS_SIMPLE.md
docs/examples/: crm_examples.md
docs/features_concepts/: README.md  advanced_features_roadmap.md  advanced_features_summary.md  agent_hints.md  agent_hints_flow.md  agent_hints_implementation.md  agent_hints_ui_mockup.md  agent_interruption_implementation.md  agent_interruption_spec.md  agent_session_pool.md  assistant_productivity_roadmap.md  azure_ad_setup.md  chat_context_architecture.md  command_selector.md  context_compaction.md  context_persistence.md  crm_command.md  crm_data_files.md  drag_drop_spec.md  dynamic_agent_pool.md  dynamic_tool_discovery.md  enhanced_help_system.md  file_upload_ux.md  image_paste_spec.md  integrated_development_refactoring_plan.md  interactive_questions.md  mcp_integration.md  model_switching.md  modern_prompt_editor.md  ms_graph_server.md  multimodal_file_upload.md  multimodal_image_paste.md  o365_authentication.md  permissions.md  permissions_command.md  (+28 more)
tests/: __init__.py  conftest.py  test_agent.py  test_agent_protocol.py  test_config.py  test_key_bindings.py  test_logging_config.py  test_main.py  test_mcp_registry.py  test_mcp_servers.py  test_permission_config.py  test_task_automation.py  test_task_automation_integration.py  test_use_cases.py  test_verbose.py
(+166 files in other folders)
