[project]
name = "bassi"
version = "0.1.0"
description = "Benno's Assistant - Personal AI agent for getting things done"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "rich>=13.9.4",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "tavily-python>=0.7.12",
    "mcp>=1.18.0",
    "claude-agent-sdk==0.1.6",
    "prompt-toolkit>=3.0.52",
    "msgraph-sdk>=1.46.0",
    "azure-identity>=1.25.1",
    "pillow>=12.0.0",
    "pandas>=2.3.3",
    "fastapi>=0.120.3",
    "uvicorn>=0.38.0",
    "websockets>=15.0.1",
    "fastmcp>=2.13.0.2",
    "watchfiles>=1.1.1",
    "pytest-cov>=7.0.0",
]

[project.scripts]
bassi = "bassi.core_v3.cli:main"
bassi-web = "bassi.core_v3.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-watch>=4.2.0",
    "black>=24.10.0",
    "ruff>=0.8.4",
    "mypy>=1.14.0",
    "pytest-asyncio>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 78
target-version = ["py311"]

[tool.ruff]
line-length = 78
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["bassi/core_v3/tests"]
python_files = ["test_*.py"]
addopts = "-q -ra"

markers = [
  "unit: fast, no IO",
  "integration: uses asyncio/http server",
  "e2e: uses Playwright/browser",
  "xdist_group(name): serialized group name"
]

asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

filterwarnings = [
  "ignore:websockets.legacy is deprecated:DeprecationWarning",
  "ignore:websockets.server.WebSocketServerProtocol is deprecated:DeprecationWarning",
  "ignore:remove second argument of ws_handler:DeprecationWarning",
]

[tool.uv.workspace]
members = ["yue-claude-test"]

[dependency-groups]
dev = [
    "pexpect>=4.9.0",
    "pytest-asyncio>=1.2.0",
    "pytest-playwright>=0.7.1",
    "pytest-xdist>=3.8.0",
]
